# python-monorepo-sample

./: .gitignore  .octocov.yml  README.md
.github/workflows/: test.yml
libs/common/: .coverage  .octocov.yml  .tool-versions  pyproject.toml
libs/common/common/database/: mysql.py
libs/common/common/domain/entity/: edinet_company.py
libs/common/common/domain/vo/: capital_stock.py  corporate_number.py  edinet_code.py  industry.py  is_consolidated.py  is_listed.py  month_date.py  ticker_symbol.py
libs/common/common/logging/: logger.py
libs/common/common/models/: Base.py  EdinetCompany.py
libs/common/tests/database/: test_mysql.py
libs/common/tests/domain/entity/: test_edinet_company.py
libs/common/tests/domain/entity/__snapshots__/: test_edinet_company.ambr
libs/common/tests/logging/: test_logger.py
libs/pytest-common/: .octocov.yml  pyproject.toml
libs/pytest-common/pytest_common/: compose.yml  plugin.py
libs/pytest-common/pytest_common/factories/: edinet_companies.py
libs/pytest-common/tests/: test_plugin.py
main/: index.html
main/libs/common/: class_index.html  function_index.html  index.html  status.json  z_0287556a22bd1f40_mysql_py.html  z_45212bcbcf167531_capital_stock_py.html  z_45212bcbcf167531_corporate_number_py.html  z_45212bcbcf167531_edinet_code_py.html  z_45212bcbcf167531_industry_py.html  z_45212bcbcf167531_is_consolidated_py.html  z_45212bcbcf167531_is_listed_py.html  z_45212bcbcf167531_month_date_py.html  z_45212bcbcf167531_ticker_symbol_py.html  z_e6bc3c30685a3c1d_logger_py.html  z_f116ca7f78c6ee48_edinet_company_py.html
main/libs/pytest-common/: class_index.html  function_index.html  index.html  z_78179f5dfd52de1e_plugin_py.html
pr-7/158cc85b82855fa108491ee62c1eebf131da3bc9/: index.html
pr-7/158cc85b82855fa108491ee62c1eebf131da3bc9/libs/common/: class_index.html  function_index.html  index.html  z_0287556a22bd1f40_mysql_py.html  z_45212bcbcf167531_capital_stock_py.html  z_45212bcbcf167531_corporate_number_py.html  z_45212bcbcf167531_edinet_code_py.html  z_45212bcbcf167531_industry_py.html  z_45212bcbcf167531_is_consolidated_py.html  z_45212bcbcf167531_is_listed_py.html  z_45212bcbcf167531_month_date_py.html  z_45212bcbcf167531_ticker_symbol_py.html  z_e6bc3c30685a3c1d_logger_py.html  z_f116ca7f78c6ee48_edinet_company_py.html
pr-7/158cc85b82855fa108491ee62c1eebf131da3bc9/libs/pytest-common/: class_index.html  function_index.html  index.html  status.json  z_78179f5dfd52de1e_plugin_py.html
pr-8/387a1191c8cc27fcc37d21902ca05eaeceed03e9/libs/common/: class_index.html  function_index.html  index.html  z_0287556a22bd1f40_mysql_py.html  z_45212bcbcf167531_capital_stock_py.html  z_45212bcbcf167531_corporate_number_py.html  z_45212bcbcf167531_edinet_code_py.html  z_45212bcbcf167531_industry_py.html  z_45212bcbcf167531_is_consolidated_py.html  z_45212bcbcf167531_is_listed_py.html  z_45212bcbcf167531_month_date_py.html  z_45212bcbcf167531_ticker_symbol_py.html  z_e6bc3c30685a3c1d_logger_py.html  z_f116ca7f78c6ee48_edinet_company_py.html
projects/download-edinet-codelist/: .tool-versions  pyproject.toml
projects/download-edinet-codelist/src/controller/: service.py
projects/download-edinet-codelist/src/interactor/: service.py
projects/download-edinet-codelist/src/repository/: service.py
