[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-lambda-powertools>=3.2.0",
    "mysql-connector-python>=9.1.0",
    "pydantic>=2.9.2",
    "sqlalchemy>=2.0.36",
    "ulid-py>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "poethepoet>=0.29.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.1",
    "syrupy>=4.7.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[tool.poe.tasks.test]
help = "Run pytest"
cmd = "python -m pytest"

[tool.poe.tasks.test-snapshot-update]
help = "Run pytest and update snapshots"
cmd = "python -m pytest --snapshot-update"

[tool.pytest.ini_options]
addopts = "--cov=common --cov-report term-missing"
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]
ignore_errors = true
precision = 2
skip_empty = true

